test/src/e2e_vm_tests/test_programs/should_fail/config_time_constants_non_literal/src/main.sw
script;

struct S {
    x: u64,
}

fn main() -> S {
    s
}
